# MoveMate

./: .gitignore  CMakeLists.txt  Running.csv  Strong.csv  Strong2.csv  Walking3.csv  Walking4.csv  Weak 2.csv  Weak.csv  Weak3.csv  imu_values.csv  partitions.csv  sdkconfig  sdkconfig.old  server.py  step_analysis.ipynb
components/st7789/: fontx.c
main/: CMakeLists.txt  display.c  display.h  icons.c  icons.h  idf_component.yml  main.c  score.c  score.h  sensor.c  sensor.h  stepcounter.c  stepcounter.h  tcp_client.c
